--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "react-router-dom": "^6.25.1",
     "sass": "^1.77.8",
+    "swiper": "^11.1.9",
     "vite": "^5.3.4"
   }
 }
